@@ -6,7 +6,6 @@ end
 # Show requested [Edit Campaign] form.
 id = dom_id(@campaign)
 if params[:cancel].blank?
-  page.call "crm.hide_form", :create_campaign     # Hide [Create Campaign] for if it's up to avoid name clashes.
   page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
   page[id].replace_html :partial => "edit"        # Show [Edit Campaign] form.
 
