@@ -5,12 +5,19 @@ end
 
 # Show requested [Edit Contact] form.
 id = dom_id(@contact)
-if params[:cancel].blank?
-  page.call "crm.hide_form", :create_contact      # Hide [Create Contact] for if it's up to avoid name clashes.
+if params[:cancel].blank?                       # Called from contacts list item...
   page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
   page[id].replace_html :partial => "edit"        # Show [Edit Contact] form.
 
-# Hide [Edit Contact] and restore <li> with the original campaign list item.
+elsif params[:cancel] == "false"                # Called from title of the contact landing page...
+  page[:edit_contact].replace_html :partial => "edit"
+  page.call "crm.flip_form", :edit_contact, "Edit #{@contact.full_name}"
+
+# Hide [Edit Contact]
 else
-  page[id].replace :partial => "contact", :collection => [ @contact ]
+  if request.referer =~ /\/contacts\//          # Called from title of the contact landing page...
+    page.call "crm.flip_form", :edit_contact, "#{@contact.full_name}"
+  else                                          # Called from contacts list item...
+    page[id].replace :partial => "contact", :collection => [ @contact ]
+  end
 end
