@@ -1,10 +1,4 @@
 if params[:cancel] != "true"
-  page[:create_contact_arrow].replace_html "&#9660;"
-  page[:create_contact_title].replace_html "Create Contact"
   page[:create_contact].replace_html :partial => "create"
-  page << "Effect.toggle('create_contact', 'blind', { duration: 0.25, afterFinish: function() { $('contact_first_name').focus(); } });"
-else                                                    # hide
-  page[:create_contact_arrow].replace_html "&#9658;"
-  page[:create_contact_title].replace_html "Contacts"
-  page << "Effect.toggle('create_contact', 'blind', { duration: 0.25 });"
 end
+page.call "crm.flip_form", :create_contact
