@@ -10,4 +10,4 @@
     .buttonbar
       = f.submit "Save Lead"
       or
-      = link_to_remote("Cancel", :url => edit_lead_path(@lead), :method => :get, :with => "{ cancel: true }" })
+      = link_to_remote("Cancel", :url => edit_lead_path(@lead), :method => :get, :with => "{ cancel: true }" )
