@@ -1,10 +1,4 @@
 if params[:cancel] != "true"
-  page[:create_lead_arrow].replace_html "&#9660;"
-  page[:create_lead_title].replace_html "Create Lead"
   page[:create_lead].replace_html :partial => "create"
-  page << "Effect.toggle('create_lead', 'blind', { duration: 0.25, afterFinish: function() { $('lead_first_name').focus(); } });"
-else                                                    # hide
-  page[:create_lead_arrow].replace_html "&#9658;"
-  page[:create_lead_title].replace_html "Leads"
-  page << "Effect.toggle('create_lead', 'blind', { duration: 0.25 });"
 end
+page.call "crm.flip_form", :create_lead
