@@ -6,7 +6,6 @@ end
 # Show requested [Edit Opportunity] form.
 id = dom_id(@opportunity)
 if params[:cancel].blank?
-  page.call "crm.hide_form", :create_opportunity  # Hide [Create Opportunity] for if it's up to avoid name clashes.
   page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
   page[id].replace_html :partial => "edit"        # Show [Edit Opportunity] form.
 
