@@ -1,10 +1,4 @@
 if params[:cancel] != "true"
-  page[:create_opportunity_arrow].replace_html "&#9660;"
-  page[:create_opportunity_title].replace_html "Create Opportunity"
   page[:create_opportunity].replace_html :partial => "create"
-  page << "Effect.toggle('create_opportunity', 'blind', { duration: 0.25, afterFinish: function() { $('opportunity_name').focus(); } });"
-else
-  page[:create_opportunity_arrow].replace_html "&#9658;"
-  page[:create_opportunity_title].replace_html "Opportunities"
-  page << "Effect.toggle('create_opportunity', 'blind', { duration: 0.25 });"
 end
+page.call "crm.flip_form", :create_opportunity
